# sycamore-rocket-template

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .ignore  Cargo.toml  README.md
app/: Cargo.toml  global.scss  index.html
app/src/: counter.rs  index.rs  lib.rs  main.rs  nav.rs  post.rs
posts/: getting-started.md  index.json
src/: main.rs  posts.rs
