[package]
authors = [""]
edition = "2021"
name = "app"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
log = "0.4.17"
reqwasm = "0.2.1"
serde = { version = "1.0.144", features = ["derive"] }
sycamore = { version = "0.8.0", features = ["hydrate", "suspense"] }
sycamore-router = "0.8.0"
wasm-bindgen = "0.2.82"

[dependencies.web-sys]
features = ["HtmlInputElement", "InputEvent"]
version = "0.3.59"
